--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -2,6 +2,9 @@ hostname = api-access.pangolin-sdk-toutiao.com, sf6-be-pack.pglstatp-toutiao.com
 
 # 酷安去开屏广告
 ^https:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/get_ads\/ url reject-dict
+^https:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/stats\/batch\/ url reject-dict
+^https:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/settings\/ url reject-dict
+^https:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/material\/check/ url reject-dict
 ^https?:\/\/sf6-be-pack\.pglstatp-toutiao\.com\/img\/ad\.union\.api\/ url reject-img
 
 #buyhack
