--- a/Clash_Mixin.conf
+++ b/Clash_Mixin.conf
@@ -9,3 +9,7 @@ mixin:
       - 223.6.6.6
     nameserver:
       - https://56285.alidns.com/dns-query
+    fallback:
+      - tls://8.8.4.4
+    fallback-filter:
+      geoip: true
