--- a/Clash_Mixin.conf
+++ b/Clash_Mixin.conf
@@ -2,7 +2,7 @@ mixin:
   log-level: silent
   dns:
     enable: true
-    listen: :53
+    listen: 127.0.0.1:53
     enhanced-mode: fake-ip
     default-nameserver:
       - 223.5.5.5
@@ -10,6 +10,6 @@ mixin:
     nameserver:
       - https://56285.alidns.com/dns-query
     fallback:
-      - tls://8.8.4.4
+      - https://dns.google/dns-query
     fallback-filter:
       geoip: true
