--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,9 +1,23 @@
-hostname = *.pglstatp-toutiao.com, buy.itunes.apple.com, biz.caiyunapp.com, weixin110.qq.com, 10086.online-cmcc.cn, mobilebj.cn, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,*.youtube.com,*.googleapis.com
+hostname = ma-adx.ctrip.com, m.ctrip.com, buy.itunes.apple.com, biz.caiyunapp.com, weixin110.qq.com, 10086.online-cmcc.cn, mobilebj.cn, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,s.youtube.com,www.youtube.com
+
+#携程广告
+#hostname=ma-adx.ctrip.com,m.ctrip.com
+^https:\/\/ma-adx\.ctrip\.com\/_ma\.gif url reject
+^https:\/\/m\.ctrip\.com\/restapi\/.+\/json\/tripAds url reject
+^https:\/\/m\.ctrip\.com\/html5\/webresource\/js\/iscroll\.js$ url reject
+
+#qq空间广告屏蔽
+^http:\/\/c\.gdt\.qq\.com\/gdt_clickwap\.fcg\?viewid url reject
+^http:\/\/pgdt\.gtimg\.cn\/gdt\/0\/.+\.jpg url reject
+^http:\/\/v\.gdt\.qq\.com\/gdt_stats\.fcg\?viewid url reject
+^http:\/\/rpt\.gdt\.qq\.com\/creative_view\?viewid url reject
+^http:\/\/pgdt\.gtimg\.cn\/gdt\/.+ url reject
+^http:\/\/pgdt\.gtimg\.cn\/.+\/snscosdownload\/SH\/reserved\/.+ url reject
 
 # 酷安去开屏广告
-^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/package\.json  url reject-dict
-^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/daa303\/fallback\.js url reject-200
-^https?:\/\/.+\.pglstatp-toutiao\.com\/img\/ url reject-img
+#^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/package\.json  url reject-dict
+#^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/daa303\/fallback\.js url reject-200
+#^https?:\/\/.+\.pglstatp-toutiao\.com\/img\/ url reject-img
 
 #buyhack
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
@@ -24,18 +38,12 @@ https:\/\/mobilebj\.cn\/app\/appBasicInfo? url script-response-body https://raw.
 # Apple Weather
 https://weather-data.apple.com/v1/weather/[\w-_]+/[0-9]+\.[0-9]+/[0-9]+\.[0-9]+ url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/iOS_Weather.js
 
-# Youtube
-^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-200
-^https?:\/\/.+\.googlevideo\.com\/(ptracking|videogoodput) url reject-img
-^https?:\/\/r[0-9].+\.googlevideo\.com\/.+owc= url reject-img
-^https?:\/\/.+\.youtube\.com\/(.+adformat|.+get_ads) url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/(ads|atr|qoe) url reject-img
-^https?:\/\/.+\.youtube\.com\/(csi_204|gen_204|generate_204|get_midroll|pagead|ptracking) url reject-img
-^https?:\/\/.+\.youtube\.com\/pcs\/activeview url reject-img
-^https?:\/\/.+\.googleapis.com/.+ad_break url reject-img
-^https?:\/\/.+\.googleapis.com/adsmeasurement url reject-img
-ctier=[A-Z] url 302 ctier=A
-
+# YouTube去广告
+ctier=(?!SH)[A-Z] url 302 citer=A
+#^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier=(?!SH)[A-Z]) url reject-img
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject-200
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject-200
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe?.*adformat= url reject-200
 
 # IT Home
 ^https?:\/\/api\.ithome\.com\/json\/slide\/index url script-response-body https://raw.githubusercontent.com/alpha87/QuantumultX-Profiles/master/ITHome.js
