--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = ma-adx.ctrip.com, m.ctrip.com, buy.itunes.apple.com, biz.caiyunapp.com, weixin110.qq.com, 10086.online-cmcc.cn, mobilebj.cn, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,s.youtube.com,www.youtube.com
+hostname = ma-adx.ctrip.com, m.ctrip.com, biz.caiyunapp.com, weixin110.qq.com, 10086.online-cmcc.cn, mobilebj.cn, weather-data.apple.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com,*.googlevideo.com,s.youtube.com,www.youtube.com
 
 #携程广告
 #hostname=ma-adx.ctrip.com,m.ctrip.com
@@ -18,9 +18,6 @@ hostname = ma-adx.ctrip.com, m.ctrip.com, buy.itunes.apple.com, biz.caiyunapp.co
 #^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/package\.json  url reject-dict
 #^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/daa303\/fallback\.js url reject-200
 #^https?:\/\/.+\.pglstatp-toutiao\.com\/img\/ url reject-img
-
-#buyhack
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
 
 # 彩云天气
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/CWTest.js
