--- a/clash.yaml
+++ b/clash.yaml
@@ -6,9 +6,9 @@ log-level: silent
 external-controller: 127.0.0.1:9090
 proxies:
   - {name: 🇪🇺 AWS-EU, server: v2fly-test.herokuapp.com, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: v2fly-test.herokuapp.com}}
-  - {name: 🇪🇺 AWS-EU-CDN, server: eu.godlike.workers.dev, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: eu.godlike.workers.dev}}
+  - {name: 🇪🇺 AWS-EU-CDN, server: 104.19.1.204, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: eu.godlike.workers.dev}}
   - {name: 🇺🇲 AWS-US, server: v2fly-test-us.herokuapp.com, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: v2fly-test-us.herokuapp.com}}
-  - {name: 🇺🇲 AWS-US-CDN, server: us.godlike.workers.dev, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: us.godlike.workers.dev}}
+  - {name: 🇺🇲 AWS-US-CDN, server: 104.19.1.204, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: us.godlike.workers.dev}}
   - {name: 🇪🇺 AWS-EU-HK, server: transit-azure-f2s-hk.speedtestcustom.tk, port: 23125, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2fly-test.herokuapp.com}}
   - {name: 🇭🇰 AWS-US-HK, server: transit-azure-f2s-hk.speedtestcustom.tk, port: 35420, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v2fly-test-us.herokuapp.com}}
 proxy-groups:
