--- a/Clash_Mixin.conf
+++ b/Clash_Mixin.conf
@@ -2,13 +2,13 @@ mixin:
   log-level: silent
   dns:
     enable: true
-    listen: 127.0.0.1:53
-    enhanced-mode: fake-ip
+    listen: 0.0.0.0:53
+    enhanced-mode: redir-host
     default-nameserver:
-      - 119.29.29.29
-      - 119.28.28.28
+      - 223.5.5.5
+      - 223.6.6.6
     nameserver:
-      - https://doh.pub/dns-query
+      - https://dns.alidns.com/dns-query
     fallback:
       - https://1.1.1.1/dns-query
       - https://1.0.0.1/dns-query
