--- a/clash.yaml
+++ b/clash.yaml
@@ -9,12 +9,13 @@ proxies:
   - {name: 🇪🇺 AWS-EU-CDN, server: 104.19.1.204, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: eu.godlike.workers.dev}}
   - {name: 🇺🇲 AWS-US, server: v2fly-test-us.herokuapp.com, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: v2fly-test-us.herokuapp.com}}
   - {name: 🇺🇲 AWS-US-CDN, server: 104.19.1.204, port: 443, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: us.godlike.workers.dev}}
-  - {name: 🇪🇺 AWS-EU-HK, server: transit-azure-f4s-hk.speedtestcustom.tk, port: 64138, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: v2fly-test.herokuapp.com}}
-  - {name: 🇭🇰 AWS-US-HK, server: transit-azure-f4s-hk.speedtestcustom.tk, port: 53282, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: v2fly-test-us.herokuapp.com}}
+  - {name: 🇪🇺 AWS-EU-HK, server: transit-azure-f4s-hk.speedtestcustom.tk, port: 13417, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: eu.godlike.workers.dev}}
+  - {name: 🇭🇰 AWS-US-HK, server: transit-azure-f4s-hk.speedtestcustom.tk, port: 13417, type: vmess, uuid: 3ae0b85b-a980-4c63-b192-82a131e19d71, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: us.godlike.workers.dev}}
 proxy-groups:
   - name: Proxies
     type: select
     proxies:
+      - 3元一个月高速中转机场：googo.in
       - 🇪🇺 AWS-EU
       - 🇪🇺 AWS-EU-CDN
       - 🇺🇲 AWS-US
