--- a/Clash_Mixin.conf
+++ b/Clash_Mixin.conf
@@ -2,13 +2,17 @@ mixin:
   log-level: silent
   dns:
     enable: true
-    listen: 0.0.0.0:53
-    enhanced-mode: redir-host
+    listen: 127.0.0.1:53
+    enhanced-mode: fake-ip
     default-nameserver:
       - 223.5.5.5
       - 223.6.6.6
     nameserver:
-      - https://dns.alidns.com/dns-query
+      - https://56285.alidns.com/dns-query
+    fake-ip-filter:
+      - "dns.msftncsi.com"
+      - "www.msftncsi.com"
+      - "www.msftconnecttest.com"
     fallback:
       - https://1.1.1.1/dns-query
       - https://1.0.0.1/dns-query
