--- a/Clash_Mixin.conf
+++ b/Clash_Mixin.conf
@@ -2,13 +2,12 @@ mixin:
   log-level: silent
   dns:
     enable: true
-    listen: 127.0.0.1:53
     enhanced-mode: fake-ip
     default-nameserver:
-      - 223.5.5.5
-      - 223.6.6.6
+      - 119.29.29.29
+      - 119.28.28.28
     nameserver:
-      - https://56285.alidns.com/dns-query
+      - https://doh.pub/dns-query
     fake-ip-filter:
       - "dns.msftncsi.com"
       - "www.msftncsi.com"
@@ -18,3 +17,10 @@ mixin:
       - https://1.0.0.1/dns-query
     fallback-filter:
       geoip: true
+  tun:
+    enable: true
+    stack: system
+    dns-hijack:
+      - 198.18.0.2:53
+    auto-route: true
+    auto-detect-interface: true
