--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = api-access.pangolin-sdk-toutiao.com, *.pglstatp-toutiao.com, ma-adx.ctrip.com, m.ctrip.com, biz.caiyunapp.com, security.wechat.com, 10086.online-cmcc.cn, mobilebj.cn, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com
+hostname = api-access.pangolin-sdk-toutiao.com, *.pglstatp-toutiao.com, ma-adx.ctrip.com, m.ctrip.com, biz.caiyunapp.com, 10086.online-cmcc.cn, mobilebj.cn, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com
 
 # 酷安去开屏广告
 ^https?:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/get_ads\/ url reject-dict
@@ -26,9 +26,6 @@ hostname = api-access.pangolin-sdk-toutiao.com, *.pglstatp-toutiao.com, ma-adx.c
 
 # 彩云天气
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/CWTest.js
-
-#微信屏蔽跳转
-^https?:\/\/security\.wechat\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi url script-response-body https://raw.githubusercontent.com/HotKids/Rules/master/Script/weixin110.js
 
 #10086去开屏广告
 https:\/\/10086\.online\-cmcc\.cn\:20010\/gfms\/front\/hn\/busi3\!getAdvert url script-response-body https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/remove_ad/10086.js
