--- a/custom.clash.yaml
+++ b/custom.clash.yaml
@@ -1,12 +1,8 @@
-# port: 7890
-# socks-port: 7891
-# redir-port: 7892
-# tproxy-port: 7893
 mixed-port: 7890
-allow-lan: false
+allow-lan: true
 bind-address: "*"
 mode: rule
-log-level: silent
+log-level: info
 external-controller: 127.0.0.1:9090
 
 dns:
@@ -18,17 +14,17 @@ dns:
     - 223.6.6.6
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
-  use-hosts: true
+  use-hosts: false
   nameserver:
-    - https://56285.alidns.com/dns-query
+    - https://dns.alidns.com/dns-query
   fallback:
+    - tls://1.0.0.1:853
     - https://1.1.1.1/dns-query
     - https://1.0.0.1/dns-query
-  fallback-filter:
-    geoip: true
-    ipcidr:
-      - 240.0.0.0/4
-      - 0.0.0.0/32
+  fake-ip-filter:
+    - "dns.msftncsi.com"
+    - "www.msftncsi.com"
+    - "www.msftconnecttest.com"
 
 proxies:
 
