--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = api-access.pangolin-sdk-toutiao.com, *.pglstatp-toutiao.com, ma-adx.ctrip.com, m.ctrip.com, biz.caiyunapp.com, 10086.online-cmcc.cn, mobilebj.cn, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com
+hostname = api-access.pangolin-sdk-toutiao.com, *.pglstatp-toutiao.com, biz.caiyunapp.com, 10086.online-cmcc.cn, mobilebj.cn, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com
 
 # 酷安去开屏广告
 ^https?:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/get_ads\/ url reject-dict
@@ -8,12 +8,6 @@ hostname = api-access.pangolin-sdk-toutiao.com, *.pglstatp-toutiao.com, ma-adx.c
 ^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/package\.json  url reject-dict
 ^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/daa303\/fallback\.js url reject-200
 ^https?:\/\/.+\.pglstatp-toutiao\.com\/img\/ url reject-img
-
-#携程广告
-#hostname=ma-adx.ctrip.com,m.ctrip.com
-^https:\/\/ma-adx\.ctrip\.com\/_ma\.gif url reject
-^https:\/\/m\.ctrip\.com\/restapi\/.+\/json\/tripAds url reject
-^https:\/\/m\.ctrip\.com\/html5\/webresource\/js\/iscroll\.js$ url reject
 
 #qq空间广告屏蔽
 ^http:\/\/c\.gdt\.qq\.com\/gdt_clickwap\.fcg\?viewid url reject
