--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,19 +1,10 @@
-hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, api-access.pangolin-sdk-toutiao.com, *.pglstatp-toutiao.com, biz.caiyunapp.com, 10086.online-cmcc.cn, mobilebj.cn, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com
+hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, biz.caiyunapp.com, 10086.online-cmcc.cn, mobilebj.cn, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com
 
 # ---(By yichahucha)---
 # > Weibo - api.weibo.cn,mapi.weibo.com
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 # ------
-
-# 酷安去开屏广告
-^https?:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/get_ads\/ url reject-dict
-^https?:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/stats\/batch\/ url reject-dict
-^https?:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/settings\/ url reject-dict
-^https?:\/\/api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/material\/check/ url reject-dict
-^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/package\.json  url reject-dict
-^https?:\/\/.+\.pglstatp-toutiao\.com\/obj\/ad-pattern\/renderer\/daa303\/fallback\.js url reject-200
-^https?:\/\/.+\.pglstatp-toutiao\.com\/img\/ url reject-img
 
 #qq空间广告屏蔽
 ^http:\/\/c\.gdt\.qq\.com\/gdt_clickwap\.fcg\?viewid url reject
