--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, biz.caiyunapp.com, 10086.online-cmcc.cn, mobilebj.cn, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, ad.12306.cn,api.termius.com,www.wolframalpha.com,api.revenuecat.com
+hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, biz.caiyunapp.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, api.termius.com,www.wolframalpha.com,api.revenuecat.com
 
 # ---(By yichahucha)---
 # > Weibo - api.weibo.cn,mapi.weibo.com
@@ -18,13 +18,6 @@ hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, biz.caiyunapp.com, 10086
 # 彩云天气
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/master/CWTest.js
 
-#10086去开屏广告
-https:\/\/10086\.online\-cmcc\.cn\:20010\/gfms\/front\/hn\/busi3\!getAdvert url script-response-body https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/remove_ad/10086.js
-
-#北京移动去开屏广告
-https:\/\/mobilebj\.cn\/app\/appBasicInfo? url script-response-body https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/remove_ad/bjyd.js
-
-
 # IT Home
 ^https?:\/\/api\.ithome\.com\/json\/slide\/index url script-response-body https://raw.githubusercontent.com/alpha87/QuantumultX-Profiles/master/ITHome.js
 ^https?:\/\/api\.ithome\.com\/json\/newslist\/news url script-response-body https://raw.githubusercontent.com/alpha87/QuantumultX-Profiles/master/ITHome.js
@@ -37,9 +30,6 @@ https:\/\/mobilebj\.cn\/app\/appBasicInfo? url script-response-body https://raw.
 # Taobao Price
 ^http://.+/amdc/mobileDispatch url script-request-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
-
-# 12306
-^https?:\/\/ad.12306.cn url reject-200
 
 # Termius
 ^https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/NobyDa/Surge/JS/Termius.js
