--- a/t.yaml
+++ b/t.yaml
@@ -8,9 +8,9 @@ proxies:
   - {name: 新加坡A | 杭州联通1Gbps, server: china-zj-hz-1.forwardserver.xyz, port: 36859, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}, udp: true}
   - {name: 美国A | 杭州联通1Gbps, server: china-zj-hz-1.forwardserver.xyz, port: 35241, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}, udp: true}
   - {name: 美国B | 杭州联通1Gbps, server: china-zj-hz-1.forwardserver.xyz, port: 36567, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}, udp: true}
-  - {name: "🇸🇬 [备用] 新加坡A | 直连", server: v1.369855.xyz, port: 11443, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
-  - {name: "🇺🇸 [备用] 美国A | 直连", server: 173.255.215.146, port: 11443, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
-  - {name: "🇺🇸 [备用] 美国B | 中转", server: v2.369855.xyz, port: 11443, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
+  - {name: "🇸🇬 [备用] 新加坡A | 直连", server: china-zj-hz-1.forwardserver.xyz, port: 36859, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
+  - {name: "🇺🇸 [备用] 美国A | 直连", server: china-zj-hz-1.forwardserver.xyz, port: 35241, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
+  - {name: "🇺🇸 [备用] 美国B | 中转", server: china-zj-hz-1.forwardserver.xyz, port: 36567, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
 proxy-groups:
   - name: Proxies
     type: select
