--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, biz.caiyunapp.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, api.termius.com,www.wolframalpha.com,api.revenuecat.com
+hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, biz.caiyunapp.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, www.wolframalpha.com,api.revenuecat.com
 
 # ---(By yichahucha)---
 # > Weibo - api.weibo.cn,mapi.weibo.com
@@ -23,16 +23,12 @@ hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, biz.caiyunapp.com, api.i
 ^https?:\/\/api\.ithome\.com\/json\/newslist\/news url script-response-body https://raw.githubusercontent.com/alpha87/QuantumultX-Profiles/master/ITHome.js
 ^https?:\/\/api\.ithome\.com\/json\/listpage\/news.* url script-response-body https://raw.githubusercontent.com/alpha87/QuantumultX-Profiles/master/ITHome.js
 
-
 # JD Price
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
 
 # Taobao Price
 ^http://.+/amdc/mobileDispatch url script-request-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
-
-# Termius
-^https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/NobyDa/Surge/JS/Termius.js
 
 # Wolframalpha
 ^https?://www\.wolframalpha\.com\/users\/me url script-response-body https://raw.githubusercontent.com/godlikeanyone/Rules/local/WolframAlpha.js
