--- a/t.yaml
+++ b/t.yaml
@@ -11,6 +11,10 @@ proxies:
   - {name: "🇸🇬 [备用] 新加坡A | 直连", server: china-zj-hz-1.forwardserver.xyz, port: 33982, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国A | 直连", server: china-zj-hz-1.forwardserver.xyz, port: 30369, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国B | 中转", server: china-zj-hz-1.forwardserver.xyz, port: 41042, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
+  - {name: "🇸🇬 [Lv.1] 新加坡A | 直连", server: v1.369855.xyz, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/sg, ws-headers: {Host: sgav2.ddns.tjiasu.xyz}}
+  - {name: "🇺🇸 [Lv.1] 美国A | 直连", server: 173.255.215.146, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/common, ws-headers: {Host: usav2.ddns.tjiasu.xyz}}
+  - {name: "🇺🇸 [Lv.1] 美国B | 中转", server: v2.369855.xyz, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/rn, ws-headers: {Host: usbv2.ddns.tjiasu.xyz}}
+proxy-groups:
 proxy-groups:
   - name: Proxies
     type: select
@@ -21,6 +25,9 @@ proxy-groups:
       - 🇸🇬 [备用] 新加坡A | 直连
       - 🇺🇸 [备用] 美国A | 直连
       - 🇺🇸 [备用] 美国B | 中转
+      - 🇸🇬 [Lv.1] 新加坡A | 直连
+      - 🇺🇸 [Lv.1] 美国A | 直连
+      - 🇺🇸 [Lv.1] 美国B | 中转
 rules:
  - DOMAIN-SUFFIX,1password.com,DIRECT
  - DOMAIN-SUFFIX,vultr.com,DIRECT
