--- a/t.yaml
+++ b/t.yaml
@@ -5,10 +5,10 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 新加坡A | 杭州联通1Gbps, server: china-zj-hz-1.forwardserver.xyz, port: 33982, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}, udp: true}
+  - {name: 新加坡A | 江门移动3Gbps, server: 120.240.48.25, port: 25003, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}, udp: true}
   - {name: 美国A | 杭州联通1Gbps, server: china-zj-hz-1.forwardserver.xyz, port: 30369, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}, udp: true}
   - {name: 美国B | 杭州联通1Gbps, server: china-zj-hz-1.forwardserver.xyz, port: 41042, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}, udp: true}
-  - {name: "🇸🇬 [备用] 新加坡A | 直连", server: china-zj-hz-1.forwardserver.xyz, port: 33982, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
+  - {name: "🇸🇬 [备用] 新加坡A | 江门移动3Gbps", server: 120.240.48.25, port: 25003, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国A | 直连", server: china-zj-hz-1.forwardserver.xyz, port: 30369, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国B | 中转", server: china-zj-hz-1.forwardserver.xyz, port: 41042, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
   - {name: "🇸🇬 [Lv.1] 新加坡A | 直连", server: v1.369855.xyz, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/sg, ws-headers: {Host: sgav2.ddns.tjiasu.xyz}}
@@ -18,10 +18,10 @@ proxy-groups:
   - name: Proxies
     type: select
     proxies:
-      - 新加坡A | 杭州联通1Gbps
+      - 新加坡A | 江门移动3Gbps
       - 美国A | 杭州联通1Gbps
       - 美国B | 杭州联通1Gbps
-      - 🇸🇬 [备用] 新加坡A | 直连
+      - 🇸🇬 [备用] 新加坡A | 江门移动3Gbps
       - 🇺🇸 [备用] 美国A | 直连
       - 🇺🇸 [备用] 美国B | 中转
       - 🇸🇬 [Lv.1] 新加坡A | 直连
