--- a/t.yaml
+++ b/t.yaml
@@ -14,6 +14,7 @@ proxies:
   - {name: "🇸🇬 [Lv.1] 新加坡A | 直连", server: v1.369855.xyz, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/sg, ws-headers: {Host: sgav2.ddns.tjiasu.xyz}}
   - {name: "🇺🇸 [Lv.1] 美国A | 直连", server: 173.255.215.146, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/common, ws-headers: {Host: usav2.ddns.tjiasu.xyz}}
   - {name: "🇺🇸 [Lv.1] 美国B | 中转", server: v2.369855.xyz, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/rn, ws-headers: {Host: usbv2.ddns.tjiasu.xyz}}
+  - {name: hax, server: hax.klee.ml, port: 443, type: vmess, uuid: b0ff375d-87b8-4300-8741-83fe14f4c1c9, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: hax.klee.ml}}
 proxy-groups:
   - name: Proxies
     type: select
@@ -27,6 +28,7 @@ proxy-groups:
       - 🇸🇬 [Lv.1] 新加坡A | 直连
       - 🇺🇸 [Lv.1] 美国A | 直连
       - 🇺🇸 [Lv.1] 美国B | 中转
+      - hax
 rules:
  - DOMAIN-SUFFIX,1password.com,DIRECT
  - DOMAIN-SUFFIX,vultr.com,DIRECT
