--- a/t.yaml
+++ b/t.yaml
@@ -5,32 +5,32 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 【推荐】流媒体解锁Hax, server: hax0.klee.ml, port: 2096, type: vmess, uuid: 153b2844-2833-4002-fca6-d5ff0395f8af, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /godlike, headers: {Host: hax0.klee.ml}}}
+  - {name: 【推荐】流媒体解锁-Hax, server: hax0.klee.ml, port: 2096, type: vmess, uuid: 153b2844-2833-4002-fca6-d5ff0395f8af, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /godlike, headers: {Host: hax0.klee.ml}}}
   - {name: 新加坡A | 深港隧道, server: 120.240.86.101, port: 45144, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}, udp: true}
-  - {name: 美国A | 杭州联通1Gbps, server: china-zj-hz-1.forwardserver.xyz, port: 30369, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}, udp: true}
-  - {name: 美国B | 杭州联通1Gbps, server: china-zj-hz-1.forwardserver.xyz, port: 41042, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}, udp: true}
+  - {name: 美国A | 微软云加速, server: az.01.nkeo.top, port: 25078, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}, udp: true}
+  - {name: 美国B | 微软云加速, server: az.01.nkeo.top, port: 25079, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}, udp: true}
   - {name: "🇸🇬 [备用] 新加坡A | 深港隧道", server: 120.240.86.101, port: 45144, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
-  - {name: "🇺🇸 [备用] 美国A | 直连", server: china-zj-hz-1.forwardserver.xyz, port: 30369, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
-  - {name: "🇺🇸 [备用] 美国B | 中转", server: china-zj-hz-1.forwardserver.xyz, port: 41042, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
-  - {name: "🇸🇬 [Lv.1] 新加坡A | 直连", server: v1.369855.xyz, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/sg, ws-headers: {Host: sgav2.ddns.tjiasu.xyz}}
-  - {name: "🇺🇸 [Lv.1] 美国A | 直连", server: 173.255.215.146, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/common, ws-headers: {Host: usav2.ddns.tjiasu.xyz}}
-  - {name: "🇺🇸 [Lv.1] 美国B | 中转", server: v2.369855.xyz, port: 11443, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/rn, ws-headers: {Host: usbv2.ddns.tjiasu.xyz}}
-  - {name: 【推荐】CloudFlare中转-Hax德国, server: hax.klee.ml, port: 2096, type: vmess, uuid: b0ff375d-87b8-4300-8741-83fe14f4c1c9, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /, ws-headers: {Host: hax.klee.ml}}
+  - {name: "🇺🇸 [备用] 美国A | 微软云加速", server: az.01.nkeo.top, port: 25078, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
+  - {name: "🇺🇸 [备用] 美国B | 微软云加速", server: az.01.nkeo.top, port: 25079, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
+  - {name: "🇸🇬 [Lv.1] 新加坡A | 微软云加速", server: az.01.nkeo.top, port: 25077, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/sg, ws-headers: {Host: sgav2.ddns.tjiasu.xyz}}
+  - {name: "🇺🇸 [Lv.1] 美国A | 微软云加速", server: az.01.nkeo.top, port: 25078, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/common, ws-headers: {Host: usav2.ddns.tjiasu.xyz}}
+  - {name: "🇺🇸 [Lv.1] 美国B | 微软云加速", server: az.01.nkeo.top, port: 25079, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/rn, ws-headers: {Host: usbv2.ddns.tjiasu.xyz}}
+  - {name: 【推荐】微软云加速-Hax, server: az.01.nkeo.top, port: 25081, type: vmess, uuid: 153b2844-2833-4002-fca6-d5ff0395f8af, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /godlike, ws-headers: {Host: hax0.klee.ml}}
 proxy-groups:
   - name: Proxies
     type: select
     proxies:
-      - 【推荐】流媒体解锁Hax
-      - 【推荐】CloudFlare中转-Hax德国
+      - 【推荐】流媒体解锁-Hax
+      - 【推荐】微软云加速-Hax
       - 新加坡A | 深港隧道
-      - 美国A | 杭州联通1Gbps
-      - 美国B | 杭州联通1Gbps
+      - 美国A | 微软云加速
+      - 美国B | 微软云加速
       - 🇸🇬 [备用] 新加坡A | 深港隧道
-      - 🇺🇸 [备用] 美国A | 直连
-      - 🇺🇸 [备用] 美国B | 中转
-      - 🇸🇬 [Lv.1] 新加坡A | 直连
-      - 🇺🇸 [Lv.1] 美国A | 直连
-      - 🇺🇸 [Lv.1] 美国B | 中转
+      - 🇺🇸 [备用] 美国A | 微软云加速
+      - 🇺🇸 [备用] 美国B | 微软云加速
+      - 🇸🇬 [Lv.1] 新加坡A | 微软云加速
+      - 🇺🇸 [Lv.1] 美国A | 微软云加速
+      - 🇺🇸 [Lv.1] 美国B | 微软云加速
 rules:
  - GEOIP,CN,DIRECT
  - MATCH,Proxies
