--- a/t.yaml
+++ b/t.yaml
@@ -6,7 +6,7 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 【推荐】流媒体解锁-Hax, server: hax0.klee.ml, port: 2096, type: vmess, uuid: 153b2844-2833-4002-fca6-d5ff0395f8af, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /godlike, headers: {Host: hax0.klee.ml}}}
-  - {name: 新加坡A | 深港隧道, server: 120.240.86.101, port: 45144, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}, udp: true}
+  - {name: 新加坡A | 香港微软云加速, server: az.01.nkeo.top, port: 25083, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}, udp: true}
   - {name: 美国A | 微软云加速, server: az.01.nkeo.top, port: 25078, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}, udp: true}
   - {name: 美国B | 微软云加速, server: az.01.nkeo.top, port: 25079, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}, udp: true}
   - {name: "🇸🇬 [备用] 新加坡-长沙联通BGP入口", server: 116.162.33.210, port: 25049, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
@@ -19,7 +19,7 @@ proxy-groups:
     proxies:
       - 【推荐】流媒体解锁-Hax
       - 【推荐】微软云加速-Hax
-      - 新加坡A | 深港隧道
+      - 新加坡A | 香港微软云加速
       - 美国A | 微软云加速
       - 美国B | 微软云加速
       - 🇸🇬 [备用] 新加坡-长沙联通BGP入口
